added craft link

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <nav>
             <ul class="nav-menu">
                 <li><a href="index.html">home</a></li>
-                <li><a href="#work">work</a></li>
-                <li><a href="#about">about</a></li>
+                <li><a href="#work">what i'm proud of</a></li>
+                <li><a href="#about">about me</a></li>
                 <li><a href="#contact">connect</a></li>
             </ul>
         </nav>
@@ -45,45 +45,46 @@
 
             <div class="row">
                 <div class="column one-half">
-                   <a target="_blank" href="http://lifesmack.co"> 
+                   <a target="_blank" href="http://lifesmack.co">
                     <img src="./img/lifesmack.png" alt="Image of LifeSmack">
                     </a> <!-- end link -->
                     <h2>LifeSmack</h2>
-						<div class="desc">A goal setting application that allows for users to select from existing, proven goal plans, published by experts in their fields. Users can also sort tasks among their goals by different parameters to allow for progress on any goal at any spare moment. Website built, mobile version prototyped.
-							<h4>Tools:</h4> React, PHP, Postman, NodeJS, Knack and Squarespace (for prototyping)
-						</div>
+        						<div class="desc">A goal setting application that allows for users to select from existing, proven goal plans, published by experts in their fields. Users can also sort tasks among their goals by different parameters to allow for progress on any goal at any spare moment. Website built, mobile version prototyped.
+        							<h4>Tools:</h4> React, PHP, Postman, NodeJS, Knack and Squarespace (for prototyping)
+        						</div>
                 </div> <!-- end column -->
 
                 <div class="column one-half">
-                    <img src="./img/textreminders.png" alt="Image of TextReminders">
+                    <a href="./projects/crafts.html">
+                      <img src="./img/crafts.jpg" alt="Image of TextReminders">
                     </a> <!-- end link -->
-                    <h2>TextReminders</h2>
-						<div class="desc">
-						Mobile application designed to send SMS reminders of infrequent events on a regular cadence or one-time occurrence.
-							<h4>Tools:</h4> React-native, PostgresSQL, Expo, Twilio, NodeJS, Marvel (for prototyping)
-						</div>
+                    <h2>Crafting</h2>
+        						<div class="desc">
+        						  My passion projects since childhood have always been in the arts & crafts space. Here's a few do-dads I'm most proud of.
+        							<h4>Tools:</h4> Knitting needles, yarn, embroidery thread, acrylic paints, pencil
+        						</div>
                 </div> <!-- end column -->
-               </div> <!-- end row  -->
+         </div> <!-- end row  -->
 
 
 
                 <div class="column one-third">
 				</div>
 				<div class="row">
-				
+
                 <div class="column one-third">
                     <img src="./img/seasonofgiving.jpg" alt="Image of Season of Giving" class="mobile">
                     </a> <!-- end link -->
                     <h2>Season of Giving</h2>
 						<div>
 							An application designed to generate donation-based holiday wish lists to be emailed to your friends and family.
-							<h4>Tools:</h4> PHP 
+							<h4>Tools:</h4> PHP
 						</div>
                 </div> <!-- end column -->
 
                 <div class="column one-third">
 				</div>
-				
+
             </div> <!-- end row  -->
     </section> <!-- end portfolio -->
 
