fixed bugs on deploy

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div class="column one-half">
                     <a href="./projects/crafts.html">
-                      <img src="./img/crafts.jpg" alt="Image of TextReminders">
+                      <img src="./img/crafts.jpg" alt="Image of Crafting">
                     </a> <!-- end link -->
                     <h2>Crafting</h2>
         						<div class="desc">
