--- a/projects/crafts.html
+++ b/projects/crafts.html
@@ -38,7 +38,8 @@
           <p>Where it all started. I grew up comparing the latest fiber arts projects at family get-togethers, crafting with fabric scraps and glue, and knitting during mundane high school classes. Nowadays I don't set aside too much time for the fiber arts, but I am beyond thankful for the medium for initially building my confidence in crafting.</p>
           <div class="column one-half">
             <div class="charts">
-              <img src="./sweater.jpg" alt="Sweater">
+              <img src="./sweater.png" alt="Sweater">
+                <img src="./bobs_burgers.jpg" alt="Bob's Burgers">
             </div>
           </div>
           <div class="column one-half">
@@ -63,14 +64,14 @@
             <div class="charts">
               <img src="./sam_brian.jpg" alt="Sam and Brian">
               <img src="./violin.jpg" alt="Violin">
-              <img src="./sarah_jon.jpg" alt="Sarah and Jon">
+              <img src="./sarah_jon.png" alt="Sarah and Jon">
             </div>
           </div>
 
         <div class="column one-half">
           <div class="charts">
             <img src="./chapel2.jpg" alt="Chapel">
-            <img src="./victoria_dana.jpg" alt="Victoria and Dana">
+            <img src="./victoria_dana.png" alt="Victoria and Dana">
             <img src="./chapel1.jpg" alt="Chapel">
           </div>
         </div>
@@ -88,7 +89,7 @@
         <div class="column one-half">
           <div class="charts">
             <img src="./flowers.jpg" alt="Flowers">
-            <img src="./parks_mural.jpg" alt="Mural at UMass Amherst">
+            <img src="./parks_mural.png" alt="Mural at UMass Amherst">
             <img src="./tree.jpg" alt="Tree">
           </div>
         </div>
